--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Наш Проект</title>
+    <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'/>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="Style.css" />
+    <link rel="stylesheet" href="style.css" />
     <script src= "script.js"> </script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -19,77 +20,218 @@
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-  </head>
-  <body>
-    <section class="section_1 container-fluid p-0">
-      <div class="d-flex flex-column">
-        <div>
-          <header>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
-              <a class="navbar-brand" href="#">Страница Проекта</a>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-toggle="collapse"
-                data-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <div class="navbar-nav mr-auto"></div>
-                <ul class="navbar-nav">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="#"
-                      >Домашняя страница <span class="sr-only">(current)</span></a
-                    >
-                  </li>
-                  <li class="nav-item dropdown show">
-                    <a class="nav-link btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Что-то
-                    </a>
-                      <div class="dropdown-menu">
-                       <a class="dropdown-item" href="#">Дополнительное 1</a>
-                       <a class="dropdown-item" href="#">Дополнительное 2</a>
-                       <a class="dropdown-item" href="#">Дополнительное 3</a>
-                      </div>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Что-то ещё</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Ещё что-то</a>
-                  </li>
-                </ul>
-              </div>
-            </nav>
-          </header>
-        </div>
+</head>
 
-        <div class="container-fluid text-center heading">
-            <video src="video.mp4" autoplay muted loop id="Video"></video>
-          <h1 class="h1">Это наш проект <span>.</span> Здесь должно что-то быть</h1>
-          <p class="p">
-            Здесь должно быть описание этой стриницы, но нам лень, поэтому Lorem, 
-            ipsum dolor sit amet consectetur adipisicing elit. Dolore
-            molestias fugiat quos.
-          </p>
-          <button type="button" class="btn btn1 btn-primary">Подробнее</button>
-          <button type="button" class="btn btn2 btn-danger">Загрузить</button>
+<body>
+
+<!-- ************************************ Header ************************************* -->
+  <header class="navbar-region">
+    <div class="header-background"></div>
+    <video autoplay muted loop class="video-back">
+        <source src="video.mp4" type="video/mp4">
+    </video>
+    <div class="navbar navbar-expand-lg navbar-dark pt-4" id="navbar">
+        <div class="container-fluid px-2 px-lg-0">
+            <div class="ms-0 ms-lg-4">
+            <a class="navbar-brand" href="#">
+                <img class="img-fluid" src="img/logo-initlab.svg" alt="Project" width="156" height="31">
+            </a>
+            </div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarToggler">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active text-light navbar-effect" aria-current="page" href="#">Поддержка Drupal
+                        </a>
+                    </li>
+                    <li class="nav-item dropdown" onmouseover="showDropdown('#navbarDropdown-1','#list-1')" onmouseout="hideDropdown('#navbarDropdown-1','#list-1')">
+                        <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown-1" role="button" data-toggle="dropdown" aria-expanded="false">
+                        Администрирование
+                        </a>
+                        <ul id="list-1" class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown-1">
+                            <li><a class="dropdown-item text-light" href="https://github.com/SergeiB2002/Project">Миграция</a></li>
+                            <li><a class="dropdown-item text-light" href="#">Бэкапы</a></li>
+                            <li><a class="dropdown-item text-light" href="#">Аудит безопасности</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="#">Продвижение</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="#">Реклама</a>
+                    </li>
+                    <li class="nav-item dropdown" onmouseover="showDropdown('#navbarDropdown-2','#list-2')" onmouseout="hideDropdown('#navbarDropdown-2','#list-2')">
+                        <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown-2" role="button" data-toggle="dropdown" aria-expanded="false">
+                            О нас
+                        </a>
+                        <ul id="list-2" class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown-2">
+                            <li><a class="dropdown-item text-light" href="#team">Команда</a></li>
+                            <li><a class="dropdown-item text-light" href="#blogger">DRUPALGIVE</a></li>
+                            <li><a class="dropdown-item text-light" href="#blogger">Блог</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="#">Проекты</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="#">Контакты</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
-    </section>
-  </body>
+    </div>
+    <div class="header-data container-fluid">
+        <div class="row d-flex" id="header-data">
+            <div class="col-10 col-lg-5 px-0 text-start ms-4 me-auto py-5">
+                <h1 class="text-about-main">
+                    Поддержка
+                    <br/>
+                    сайтов на Drupal
+                </h1>
+                <div class="text-about-service">
+                    Сопровождение и поддержка сайтов
+                    <br/>
+                    на CMS Drupal любых версий и сложности
+                </div>
+                <a role="button" href="#tariff" class="btn btn-outline-light btn-tariff mt-5">
+                    Тарифы
+                </a>
+            </div>
+            <div class="col-11 col-lg-6 me-sm-3 mx-auto mt-3 pb-5 pb-lg-0 py-5">
+                <div class="row">
+                    <div class="col-5 col-sm-4 achievement-tab ms-auto me-auto">
+                        <div class="row">
+                            <div class="col-3 achievement-tab-title-main">
+                                #1
+                            </div>
+                            <div class="col ms-2">
+                                <img src="img/cup.png" alt="cup">
+                            </div>
+                            <p class="extra-text extra-text-zero">
+                                Drupal-разработчик
+                                <br/>
+                                в России по версии Рейтинга Рунета
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-5 col-sm-4 achievement-tab ms-auto me-auto">
+                        <div class="a-t-wrapper">
+                            <div class="achievement-tab-title">3+</div>
+                            <p class="extra-text">
+                                средний опыт
+                                <br/>
+                                специалистов более
+                                <br/>
+                                более 3 лет
+                            </p>
+                            </div>
+                        </div>
+                    <div class="col-5 col-sm-4 achievement-tab mt-sm-0 mt-4 ms-auto me-auto">
+                        <div class="achievement-tab-title">14</div>
+                        <p class="extra-text">
+                            лет опыта в сфере Drupal
+                        </p>
+                    </div>
+                    <div class="col-5 col-sm-4 achievement-tab mt-4 ms-auto me-auto">
+                        <div class="achievement-tab-title">50+</div>
+                        <p class="extra-text">
+                            модулей и тем
+                            <br/>
+                            в формате DRUPALGIVE
+                        </p>
+                    </div>
+                    <div class="col-5 col-sm-4 achievement-tab mt-4 ms-auto me-auto">
+                        <div class="achievement-tab-title">90 000+</div>
+                        <p class="extra-text">
+                            часов поддержки
+                            <br/>
+                            сайтов на Drupal
+                        </p>
+                    </div>
+                    <div class="col-5 col-sm-4 achievement-tab mt-4 ms-auto me-auto">
+                        <div class="achievement-tab-title">300+</div>
+                        <p class="extra-text">
+                            Проектов
+                            <br/>
+                            на поддержке
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+<!-- ************************************ Header ************************************* -->
+
+<!-- ************************************ Competency ************************************* -->
+<div class="container-fluid competency-region">
+
+
+
+
+</div>
+<!-- ************************************ Competency ************************************* -->
+
+<!-- ************************************ Support ************************************* -->
+<div class="container-fluid support-region">
+
+
+
+</div>
+<!-- ************************************ Support ************************************* -->
+
+<!-- ************************************ Plans ************************************* -->
+<div class="container-fluid" id="tariff">
+
+
+
+
+</div>
+<!-- ************************************ Plans ************************************* -->
+
+<!-- ************************************ Cases ************************************* -->
+<div id="blogger" class="container blog my-4">
+
+
+  
+</div>
+<!-- ************************************ Cases ************************************* -->
+
+<!-- ************************************ Team ************************************* -->
+<h1 id="team" class="text-center mt-5 mb-3"> Команда </h1>
+<div class="container team">
+
+
+</div>
+<!-- ************************************ Team ************************************* -->
+
+<!-- ************************************ Reviews ************************************* -->
+<div class="review-sign">
+
+
+</div>
+<!-- ************************************ Reviews ************************************* -->
+
+<!-- ************************************ Partners ************************************* -->
+<div class="container-fluid workingWithCarouselWrapper">
+
+
+</div>
+<!-- ************************************ Partners ************************************* -->
+
+<!-- ************************************ Webform ************************************* -->
+<div class="container-fluid pt-3 pb-5 pb-md-0 footer-region" id="footerRegion">
+
+
+</div>
+<!-- ************************************ Webform ************************************* -->
+
+</body>
 </html>
   
