--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 <!-- ************************************ Reviews ************************************* -->
 
 <!-- ************************************ Partners ************************************* -->
-<div class="container-fluid workingWithCarouselWrapper">
+<div class="container-fluid PartnersSliderWrapper">
 
 
 </div>
