--- a/index.html
+++ b/index.html
@@ -222,6 +222,13 @@
 
 <!-- ************************************ Partners ************************************* -->
 <div class="container-fluid PartnersSliderWrapper">
+    <div class="text-center">
+            <h5>
+                С нами работают
+            </h5>
+            <p>
+                Десятки компаний доверяют нам самое ценное, что у них есть в интернете – свои сайты. Мы делаем всё, чтобы наше сотрудничество было долгим.
+            </p>
 
 
 </div>
