--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <p>
                 Десятки компаний доверяют нам самое ценное, что у них есть в интернете – свои сайты. Мы делаем всё, чтобы наше сотрудничество было долгим.
             </p>
-<div class="PartnersSlider1 my-2" id="PartnersSliderUp">
+<div class="PartnersSlider1 my-2" id="PartnersSlider1">
   <div class="SupportPic"><img src="img/SupportSlider/RedBullRacinglogo.jpg" alt="rbr" width="300" height="150"/></div>
   <div class="SupportPic"><img src="img/SupportSlider/fialogofinal.png" alt="fia" width="300" height="150"/></div>
   <div class="SupportPic"><img src="img/SupportSlider/Hondalogo.png" alt="honda" width="300" height="150"/></div>
@@ -239,7 +239,7 @@
   <div class="SupportPic"><img src="img/SupportSlider/Hondalogo.png" alt="honda" width="300" height="150"/></div>
   <div class="SupportPic"><img src="img/SupportSlider/Gazprom-Logo-rus.png" alt="gaz" width="300" height="150"/></div>
 </div>
-<div class="PartnersSlider2 my-2" id="PartnersSliderLow">
+<div class="PartnersSlider2 my-2" id="PartnersSlider2">
   <div class="SupportPic"><img src="img/SupportSlider/AMDLogopng.png" alt="amd" width="300" height="150"/></div>
   <div class="SupportPic"><img src="img/SupportSlider/MSI.png" alt="msi" width="300" height="150"/></div>
   <div class="SupportPic"><img src="img/SupportSlider/Nvidialogo.png" alt="nvd" width="300" height="150"/></div>
