--- a/index.html
+++ b/index.html
@@ -227,6 +227,10 @@
   <div class="SupportPic"><img src="img/SupportSlider/fialogofinal.png" alt="fia" width="500" height="200"/></div>
   <div class="SupportPic"><img src="img/SupportSlider/Hondalogo.png" alt="honda" width="500" height="200"/></div>
   <div class="SupportPic"><img src="img/SupportSlider/Gazprom-Logo-rus.png" alt="gaz" width="500" height="200"/></div>
+  <div class="SupportPic"><img src="img/SupportSlider/RedBullRacinglogo.jpg" alt="rbr" width="500" height="200"/></div>
+  <div class="SupportPic"><img src="img/SupportSlider/fialogofinal.png" alt="fia" width="500" height="200"/></div>
+  <div class="SupportPic"><img src="img/SupportSlider/Hondalogo.png" alt="honda" width="500" height="200"/></div>
+  <div class="SupportPic"><img src="img/SupportSlider/Gazprom-Logo-rus.png" alt="gaz" width="500" height="200"/></div>
 </div>
 <div class="PartnersSlider2 my-2" id="PartnersSlider2">
   <div class="SupportPic"><img src="img/SupportSlider/AMDLogopng.png" alt="amd" width="500" height="200"/></div>
@@ -234,6 +238,10 @@
   <div class="SupportPic"><img src="img/SupportSlider/Nvidialogo.png" alt="nvd" width="500" height="200"/></div>
   <div class="SupportPic"><img src="img/SupportSlider/ROG.png" alt="rog" width="500" height="200"/></div>
   <div class="SupportPic"><img src="img/SupportSlider/AMDLogopng.png" alt="amd" width="500" height="200"/></div>
+  <div class="SupportPic"><img src="img/SupportSlider/MSI.png" alt="msi" width="500" height="200"/></div>
+  <div class="SupportPic"><img src="img/SupportSlider/Nvidialogo.png" alt="nvd" width="500" height="200"/></div>
+  <div class="SupportPic"><img src="img/SupportSlider/ROG.png" alt="rog" width="500" height="200"/></div>
+   <div class="SupportPic"><img src="img/SupportSlider/AMDLogopng.png" alt="amd" width="500" height="200"/></div>
   <div class="SupportPic"><img src="img/SupportSlider/MSI.png" alt="msi" width="500" height="200"/></div>
   <div class="SupportPic"><img src="img/SupportSlider/Nvidialogo.png" alt="nvd" width="500" height="200"/></div>
   <div class="SupportPic"><img src="img/SupportSlider/ROG.png" alt="rog" width="500" height="200"/></div>
