--- a/index.html
+++ b/index.html
@@ -282,8 +282,7 @@
             </div>
         </div>
         <div class="col-md-6 col-xs-12 col-sm-6">
-            <form id="Form" action="https://formcarry.com/s/0tAvUSy9qZ1" method="POST" enctype="multipart/form-data" accept-charset="UTF-8">
-                <div class="form-row">
+            <form class="contact-form" id="Form" action="https://formcarry.com/s/0tAvUSy9qZ1" method="POST" enctype="multipart/form-data" accept-charset="UTF-8">
                     <div class="col-12">
                         <label class="text-light form-item"><br/>
                             <input class="form-control form-control-md info" type="text" name="Name" placeholder="Ваше имя" autocomplete="off">
@@ -316,7 +315,6 @@
                     <div class="col-12 mt-3">
                         <input class="btn btn-footer" type="submit" id="submitButton" value="Свяжитесь с нами!" disabled>
                     </div>
-                </div>
             </form>
             <p class="text-light mx-5 mb-3">
                 SB VM DM
