--- a/index.html
+++ b/index.html
@@ -259,63 +259,74 @@
 <!-- ************************************ Partners ************************************* -->
 
 <!-- ************************************ Webform ************************************* -->
-<footer class="footer">
-    <div class="container-fluid">
-        <div class="col-md-6 col-xs-12 col-sm-6">
-            <div class="Webform-wrapper">
-                <div class="Webform-title">
-                    Оставить заявку на <br> поддержку сайта
+<div class="container-fluid pt-3 pb-5 pb-md-0 footer-region" id="footerRegion">
+    <div class="footer-region-background"></div>
+    <div class="row d-flex mt-2 px-2">
+        <div class="col-11 col-md-10 mx-auto px-0">
+            <div class="row">
+                <div class="col-11 col-md-5 mx-auto">
+                    <h5 class="text-head-footer text-md-start text-center">
+                        Оставить заявку на 
+                        <br/>
+                        поддержку сайта
+                    </h5>
+                    <p class="text-extra-footer text-start">
+                        Срочно нужна поддержка сайта? Ваша команда не успевает справиться самостоятельно или предыдущий подрядчик не справился с работой? 
+                        Тогда вам точно к нам! Просто оставьте заявку и наш менеджер с вами свяжется!
+                    </p>
+                    <div class="text-start">
+                        <a class="text-light text-decoration-none phone" href="tel:89604952331">
+                            8 800 222-26-73
+                        </a>
+
+                    </div>
+                    <div class="text-start">
+                        <a class="text-light email" href="mailto:info@drupal-coder.ru">
+                            info@drupal-coder.ru
+                        </a>
+                    </div>
                 </div>
-                <div class="Webform-description">
-                    Срочно нужна поддержка сайта? Ваша команда не успевает справиться самостоятельно или предыдущий подрядчик не справился с работой? Тогда вам точно к нам! Просто оставьте заявку и наш менеджер с вами свяжется!
-                </div>
-                <div class="Webform-contacts">
-                    <ul>
-                        <li class="Webform-phone">
-                            <a class="num-form">8 800 222-26-73</a>
-                        </li>
-                        <li class="Webform-email">
-                            <a class="email-form">info@drupal-coder.ru</a>
-                        </li>
-                    </ul>
+                <div class="col-11 col-md-5 mx-auto">
+                    <form id="Form" action="https://formcarry.com/s/0tAvUSy9qZ1" method="POST" enctype="multipart/form-data" accept-charset="UTF-8">
+                        <div class="form-row">
+                            <div class="col-12">
+                                <label class="text-light form-group"><br/>
+                                    <input class="form-control form-control-md info" type="text" name="userName" placeholder="Ваше имя" autocomplete="off">
+                                </label><br/>
+                            </div>
+                            <div class="col-12">
+                                <label class="text-light form-group"><br/>
+                                    <input class="form-control form-control-md info" type="text" name="userPhone" placeholder="Телефон" autocomplete="off">
+                                </label><br/>
+                            </div>
+                            <div class="col-12">
+                                <label class="text-light form-group"><br/>
+                                    <input class="form-control form-control-md info" type="email" name="userEmail" placeholder="E-mail" autocomplete="off">
+                                </label><br/>
+                            </div>
+                            <div class="col-12">
+                                <label class="form-group"><br/>
+                                    <textarea class="form-control form-control-md info" name="userMsg" placeholder="Ваш комментарий" autocomplete="off"></textarea>
+                                </label><br/>
+                            </div>
+                            <div class="col-12">
+                                <label class="text-light form-group">
+                                    <input type="checkbox" id="check" class="info">
+                                    Согласен с 
+                                    <a class="form-politics" href="https://www.gazprom.ru/about/legal/policy-personal-data/" rel="nofollow">
+                                        политикой обработки персональных данных
+                                    </a>
+                                </label><br/>
+                            </div>
+                            <div class="col-12 mt-3">
+                                <input class="btn btn-footer" type="submit" id="Button" value="Свяжитесь с нами!" disabled>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-xs-12 col-sm-6">
-            <form class="contact-form" id="Form" action="https://formcarry.com/s/0tAvUSy9qZ1" method="POST" enctype="multipart/form-data" accept-charset="UTF-8">
-                    <div class="col-12">
-                        <label class="text-light form-item"><br/>
-                            <input class="form-control form-control-md info" type="text" name="Name" placeholder="Ваше имя" autocomplete="off">
-                        </label><br/>
-                    </div>
-                    <div class="col-12">
-                        <label class="text-light form-item"><br/>
-                            <input class="form-control form-control-md info" type="text" name="Phone" placeholder="Телефон" autocomplete="off">
-                        </label><br/>
-                    </div>
-                    <div class="col-12">
-                        <label class="text-light form-item"><br/>
-                            <input class="form-control form-control-md info" type="email" name="Email" placeholder="E-mail" autocomplete="off">
-                        </label><br/>
-                    </div>
-                    <div class="col-12">
-                        <label class="form-item"><br/>
-                            <textarea class="form-control form-control-md info" name="Msg" placeholder="Ваш комментарий" autocomplete="off"></textarea>
-                        </label><br/>
-                    </div>
-                    <div class="col-12">
-                        <label class="text-light form-item">
-                            <input type="checkbox" id="check" class="info">
-                            Отправляя заявку, я даю согласие на 
-                            <a class="form-politics" href="https://www.gazprom.ru/about/legal/policy-personal-data/" rel="nofollow">
-                                обработку своих персональных данных
-                            </a>
-                        </label><br/>
-                    </div>
-                    <div class="col-12 mt-3">
-                        <input class="btn btn-footer" type="submit" id="submitButton" value="Свяжитесь с нами!" disabled>
-                    </div>
-            </form>
+        <div class="col-12 mx-auto px-0 mt-5 mt-md-3 border-social">
             <p class="text-light mx-5 mb-3">
                 SB VM DM
                 <br/>
@@ -323,7 +334,7 @@
             </p>
         </div>
     </div>
-</footer>
+</div>
 <!-- ************************************ Webform ************************************* -->
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
