--- a/index.html
+++ b/index.html
@@ -203,9 +203,64 @@
 <!-- ************************************ Team ************************************* -->
 
 <!-- ************************************ Reviews ************************************* -->
-<div class="review-sign">
-
-
+<div class="reviews">
+    <h3 class="text-center">
+        Отзывы
+    </h3>
+</div>
+<div class="container-fluid reviews-content" id="ReviewsSlider">
+    <div class="row gx-2">
+        <div class="reviews-slide col-11 col-sm-9 col-md-8 py-3 mx-auto">
+            <div><img src="img/logo-estee.png" alt="estee"/>
+                <p>
+                    Наша компания Estee Design занимается дизайном интерьеров. Сайт сверстан на Drupal. Искали программистов под выполнение ряда небольших изменений и корректировок по сайту.
+                    Пообщавшись с Алексеем Синицей, приняли решение о начале работ с компанией Initlab/drupal-coder. Сотрудничеством довольны на 100%. 
+                    Четкая и понятная система коммуникации, достаточно оперативное решение по задачам. Дали рекомендации по улучшению програмной части сайта, 
+                    исправили ряд скрытых ошибок.
+                    Никогда не пишу отзывы (нет времени), но в данном случае, по просьбе Алексея, не могу не рекомендовать Initlab другим людям - 
+                    действительно компания профессионалов.
+                </p>
+                <p> 
+                    Кузин Вадим, руководитель строительного направления Дизайн-бюро интерьеров Estee  
+                    <a href="http://estee-design.ru">
+                        estee-design.ru
+                    </a>
+                </p>
+              </div>
+              <div><img src="img/cableman_ru.png" alt="cable"/>
+                <p> 
+                    Наша компания за несколько лет сменила несколько команд программистов и специалистов техподдержки,
+                     и почти отчаялась найти на российском рынке адекватное профессиональное предложение по разумной цене. 
+                     Пока мы не начали работать с командой "Инитлаб", воплощающей в себе все наши представления о нормальной системе взаимодействия в сочетании с 
+                     профессиональным неравнодушием. Впервые в моей деловой практике я чувствую надежно прикрытыми важнейшие задачи в жизни электронного СМИ, при том, 
+                     что мои коллеги работают за сотни километров от нас и мы никогда не встречались лично.
+                </p>
+                <p> 
+                    Константин Бельский, зам. генерального директора портала 
+                    <a href="http://www.cableman.ru/" tabindex="0">
+                        Кабельщик.ру
+                    </a> 
+                </p>
+              </div>
+              <div><img src="img/nashagazeta_ch.png" alt="gazeta"/>
+                <p>
+                    Моя электронная газета www.nashagazeta.ch существует в Швейцарии уже 10 лет. За это время мы сменили 7 специалистов по техподдержке, и только сейчас, 
+                    в последние несколько месяцев, с начала сотрудничества с Алексеем Синицей и его командой, 
+                    я впервые почувствовала, что у меня есть надежный технический тыл. Без громких слов и обещаний, ребята просто спокойно и качественно делают работу, быстро реагируют, 
+                    находят решения, предлагают конкретные варианты улучшения функционирования сайта и сами их оперативно осуществляют. Сотрудничество с ними – одно удовольствие!
+                </p>
+                <p>Надежда Сикорская, Женева, Швейцария</p>
+              </div>
+        </div>
+        <div class="arrows-slick text-center d-flex col-11 col-sm-9 col-md-4 my-2 my-md-4 mx-auto">
+            <div class="arrows-wrapper d-block mx-auto my-3 my-md-auto"  id="arrows">
+               <span class="arrows-block"> 
+                   <span class="current">01</span>
+                / 03
+                </span>
+            </div>
+        </div>
+       </div>
 </div>
 <!-- ************************************ Reviews ************************************* -->
 
