--- a/index.html
+++ b/index.html
@@ -163,17 +163,256 @@
 <!-- ************************************ Competency ************************************* -->
 <div class="container-fluid competency-region">
 
-
-
-
+    <div class="competencies">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <h2 class="competency-title">13 лет совершенствуем компетенции в Drupal поддержке!</h2>
+              <div class="competencies-description">
+                Разрабатываем и оптимизируем модули, расширяем функциональность сайтов, обновляем дизайн
+              </div>  
+            </div>
+          </div>   
+          <div class="row row-flex competencies-row">
+            <div class="col-6 col-md-3">
+              <div class="competency mb-3">
+                <div class="competency-wrapper">
+                  <div class="competency-header">
+                    <div class="competency-icon"><img alt="Добавление информации на сайт, создание новых разделов" src="img/competency-1.svg" class="img-responsive"></div>
+                  </div>
+                  <div class="competency-body">
+                    Добавление <br> информации на сайт,<br> создание новых <br> разделов
+                  </div>
+                </div>                
+              </div> 
+            </div>
+            <div class="col-6 col-md-3">
+              <div class="competency">
+                <div class="competency-wrapper">
+                  <div class="competency-header">
+                    <div class="competency-icon"><img alt="Разработка и оптимизация модулей сайта" src="img/competency-2.svg" class="img-responsive"></div>
+                  </div>
+                  <div class="competency-body">
+                    Разработка <br> и оптимизация <br> модулей сайта
+                  </div>
+                </div>                
+              </div> 
+            </div>
+            <div class="col-6 col-md-3">
+              <div class="competency">
+                <div class="competency-wrapper">
+                  <div class="competency-header">
+                    <div class="competency-icon"><img alt="Интеграция" src="img/competency-3.svg" class="img-responsive"></div>
+                  </div>
+                  <div class="competency-body">
+                    Интеграция с CRM, <br> 1C, платежными <br> системами, любыми <br> веб-сервисами
+                  </div>
+                </div>                
+              </div> 
+            </div>
+            <div class="col-6 col-md-3">
+              <div class="competency">
+                <div class="competency-wrapper">
+                  <div class="competency-header">
+                    <div class="competency-icon"><img alt="Доработки" src="img/competency-4.svg" class="img-responsive"></div>
+                  </div>
+                  <div class="competency-body">
+                    Любые доработки <br> функционала <br> и дизайна
+                  </div>
+                </div>                
+              </div> 
+            </div>
+            <div class="col-6 col-md-3">
+              <div class="competency">
+                <div class="competency-wrapper">
+                  <div class="competency-header">
+                    <div class="competency-icon"><img alt="Безопасность" src="img/competency-5.svg" class="img-responsive"></div>
+                  </div>
+                  <div class="competency-body">
+                    Аудит и мониторинг <br> безопасности Drupal <br> сайтов
+                  </div>
+                </div>                
+              </div> 
+            </div>
+            <div class="col-6 col-md-3">
+              <div class="competency">
+                <div class="competency-wrapper">
+                  <div class="competency-header">
+                    <div class="competency-icon"><img alt="Миграция" src="img/competency-6.svg" class="img-responsive"></div>
+                  </div>
+                  <div class="competency-body">
+                    Миграция, импорт <br> контента и апгрейд <br> Drupal
+                  </div>
+                </div>                
+              </div> 
+            </div>
+            <div class="col-6 col-md-3">
+              <div class="competency">
+                <div class="competency-wrapper">
+                  <div class="competency-header">
+                    <div class="competency-icon"><img alt="Оптимизация" src="img/competency-7.svg" class="img-responsive"></div>
+                  </div>
+                  <div class="competency-body">
+                    Оптимизация <br> и ускорение <br> Drupal-сайтов
+                  </div>
+                </div>                
+              </div> 
+            </div>
+            <div class="col-6 col-md-3">
+              <div class="competency">
+                <div class="competency-wrapper">
+                  <div class="competency-header">
+                    <div class="competency-icon"><img alt="SEO" src="img/competency-8.svg" class="img-responsive"></div>
+                  </div>
+                  <div class="competency-body">
+                    Веб-маркетинг, <br> консультации <br> и работы по SEO
+                  </div>
+                </div>                
+              </div> 
+            </div>
+          </div>
+        </div>
+      </div>
 </div>
 <!-- ************************************ Competency ************************************* -->
 
 <!-- ************************************ Support ************************************* -->
-<div class="container-fluid support-region">
-
-
-
+<div class="support">
+  <div class="container">
+    <div class="row">
+      <h1 class="col-md-12 support-text">Поддержка<br>от Drupal-coder</h1>
+    </div>
+    <div class="row row-flex support-row">
+      <div class="col-12 col-sm-6 col-md-3 serv-cols">
+        <div class="support-service">
+          <div class="serv-num">
+            01.
+          </div>
+          <div class="serv-body">
+            <h2 class="serv-article">Постановка задачи по Email</h3>
+            <div class="serv-body-text">Удобная и привычная модель постановки задач, при которой задачи фиксируются и никогда не теряются.</div>
+          </div>
+          <div class="serv-img">
+            <img src="img/support1.svg" alt="Email">
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-3 serv-cols">
+        <div class="support-service">
+          <div class="serv-num">02.</div>
+          <div class="serv-body">
+            <h2 class="serv-article">Система Helpdesk – отчетность, прозрачность</h3>
+            <div class="serv-body-text">Возможность посмотреть все заявки в работе и отработанные часы в личном кабинете через браузер.</div>
+          </div>
+          <div class="serv-img">
+            <img src="img/support2.svg" alt="Helpdesk">
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-3 serv-cols">
+        <div class="support-service">
+          <div class="serv-num">03.</div>
+          <div class="serv-body">
+            <h2 class="serv-article">Расширенная техническая поддержка</h3>
+            <div class="serv-body-text">Возможность организации расширенной техподдержки с 6:00 до 22:00 без выходных.</div>
+          </div>
+          <div class="serv-img">
+            <img src="img/support3.svg" alt="Helpdesk">
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-3 serv-cols">
+        <div class="support-service">
+          <div class="serv-num">04.</div>
+          <div class="serv-body">
+            <h2 class="serv-article">Персональный менеджер проекта</h3>
+            <div class="serv-body-text">Ваш менеджер проекта всегда в курсе текущего состояния проекта и в любой момент готов ответить на любые вопросы.</div>
+          </div>
+          <div class="serv-img">
+            <img src="img/support4.svg" alt="Helpdesk">
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-3 serv-cols">
+        <div class="support-service">
+          <div class="serv-num">05.</div>
+          <div class="serv-body">
+            <h2 class="serv-article">Удобные способы оплаты</h3>
+            <div class="serv-body-text">Безналичный расчет по договору или электронные деньги: WebMoney, Яндекс.Деньги, Paypal.</div>
+          </div>
+          <div class="serv-img">
+            <img src="img/support5.svg" alt="Helpdesk">
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-3 serv-cols">
+        <div class="support-service">
+          <div class="serv-num">06.</div>
+          <div class="serv-body">
+            <h2 class="serv-article">Работаем с SLA и NDA</h3>
+            <div class="serv-body-text">Работа в рамках соглашений о конфиденциальности и об уровне качетсва работ.</div>
+          </div>
+          <div class="serv-img">
+            <img src="img/support6.svg" alt="Helpdesk">
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-3 serv-cols">
+        <div class="support-service">
+          <div class="serv-num">07.</div>
+          <div class="serv-body">
+            <h2 class="serv-article">Штатные специалисты</h3>
+            <div class="serv-body-text">Надежные штатные специалисты, никаких фрилансеров.</div>
+          </div>
+          <div class="serv-img">
+            <img src="img/support7.svg" alt="Helpdesk">
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-3 serv-cols">
+        <div class="support-service">
+          <div class="serv-num">08.</div>
+          <div class="serv-body">
+            <h2 class="serv-article">Удобные каналы связи</h3>
+            <div class="serv-body-text">Консультации по телефону, скайпу, в месенджерах.</div>
+          </div>
+          <div class="serv-img">
+            <img src="img/support8.svg" alt="Helpdesk">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+  
+<div class="experience">
+  <div class="container">
+    <div class="row">
+      <div class="col-0 col-md-6"></div>
+      <div class="col-12 col-md-6">
+        <div class="row experience-article-row">
+          <div class="col-12 col-sm-6">
+            <h2 class="experience-article">Экспертиза в Drupal,<br> опыт 14 лет!</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-sm-6 mb-2">
+            <div class="experience-body">
+              Только системный подход – контроль версий, резервирование и тестирование!
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 mb-2">
+            <div class="experience-body">
+              Только Drupal сайты, не берем на поддержку сайты на других CMS!
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="laptop-pic">
+    <img src="img/laptop.png" alt="Ноутбук"class="laptop-left">
+  </div>
 </div>
 <!-- ************************************ Support ************************************* -->
 
