--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 <div class="support">
   <div class="container">
     <div class="row">
-      <h1 class="col-md-12 support-text">Поддержка<br>от Drupal-coder</h1>
+      <h2 class="col-md-12 support-text">Поддержка<br>от Drupal-coder</h2>
     </div>
     <div class="row row-flex support-row">
       <div class="col-12 col-sm-6 col-md-3 serv-cols">
@@ -435,7 +435,7 @@
 <!-- ************************************ Cases ************************************* -->
 
 <!-- ************************************ Team ************************************* -->
-<h1 id="team" class="text-center mt-5 mb-3"> Команда </h1>
+<h2 id="team" class="text-center support-text mt-5 mb-3"> Команда </h2>
 <div class="container team">
 
 
@@ -444,9 +444,9 @@
 
 <!-- ************************************ Reviews ************************************* -->
 <div class="reviews">
-    <h3 class="text-center">
+    <h2 class="text-center support-text">
         Отзывы
-    </h3>
+    </h2>
 </div>
 <div class="container-fluid reviews-content" id="ReviewsSlider">
     <div class="row gx-2">
@@ -507,9 +507,9 @@
 <!-- ************************************ Partners ************************************* -->
 <div class="container-fluid PartnersSliderWrapper">
     <div class="text-center">
-            <h1>
+            <h2 class="support-text">
                 С нами работают
-            </h1>
+            </h2>
             <p>
                 Десятки компаний доверяют нам самое ценное, что у них есть в интернете – свои сайты. Мы делаем всё, чтобы наше сотрудничество было долгим.
             </p>
