--- a/index1.html
+++ b/index1.html
@@ -503,7 +503,7 @@
       </div>
       <div class="col-10 price-row mx-auto">
           <div class="row">
-              <div class="col-10 col-md-4 mx-auto mt-3 price-block-wrapper price-van text-light">
+              <div class="col-10 col-md-4 mx-auto mt-3 price-block-wrapper price-van">
                   <div class="price-block py-2 px-2 pb-3 price-standard">
                       <div class="price-header pt-2">
                           <h2>
