--- a/index.html
+++ b/index.html
@@ -419,10 +419,271 @@
 
 <!-- ************************************ Plans ************************************* -->
 <div class="container-fluid" id="tariff">
-
-
-
-
+  <div class="row price-wrapper">
+      <div class="col-12 my-4 price-header text-center text-black">
+          <h1>
+              Тарифы
+          </h1>
+      </div>
+      <div class="col-10 price-row mx-auto">
+          <div class="row">
+              <div class="col-10 col-md-4 mx-auto mt-3 price-block-wrapper price-van">
+                  <div class="price-block py-2 px-2 pb-3 price-standard">
+                      <div class="price-header pt-2">
+                          <h2>
+                              Стартовый
+                          </h2>
+                      </div>
+                      <div class="price-body text-center">
+                          <div class="price-text">
+                              <div class="row gx-1">
+                                  <div class="col-2">
+                                      <img src="img/v-sign.svg" alt="double-v-sign" width="16" height="16">
+                                  </div>
+                                  <div class="col-10 text-start">
+                                      <p>
+                                          Разработка и поддержка Drupal
+                                      </p>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="price-text">
+                              <div class="row gx-1">
+                                  <div class="col-2">
+                                      <img src="img/v-sign.svg" alt="double-v-sign" width="16" height="16">
+                                  </div>
+                                  <div class="col-10 text-start">
+                                      <p>
+                                          Консультации и работы по SEO
+                                      </p>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="price-text">
+                              <div class="row gx-1">
+                                  <div class="col-2">
+                                      <img src="img/v-sign.svg" alt="double-v-sign" width="16" height="16">
+                                  </div>
+                                  <div class="col-10 text-start">
+                                      <p>
+                                          Услуги дизайнера
+                                      </p>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="price-text">
+                              <div class="row gx-1">
+                                  <div class="col-2">
+                                      <img src="img/v-sign.svg" alt="double-v-sign" width="16" height="16">
+                                  </div>
+                                  <div class="col-10 text-start">
+                                      <p>
+                                          Неиспользованные оплаченные часы переносятся на следующий месяц
+                                      </p>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="price-text">
+                              <div class="row gx-1">
+                                  <div class="col-2">
+                                      <img src="img/v-sign.svg" alt="double-v-sign" width="16" height="16">
+                                  </div>
+                                  <div class="col-10 text-start">
+                                      <p>
+                                          Предоплата от 6 000 рублей в месяц
+                                      </p>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="price-footer text-center mt-2">
+                          <a href="#footerRegion" role="button" class="btn btn-outline-light btn-price">Свяжитесь с нами!</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-10 col-md-4 mx-auto mt-1 price-block-wrapper price">
+                  <div class="price-block py-4 px-2 pb-3 price-business price-block-active">
+                      <div class="price-header pt-2">
+                          <h2>
+                              Бизнес
+                          </h2>
+                      </div>
+                      <div class="price-body text-center">
+                          <div class="price-text">
+                              <div class="row gx-1">
+                                  <div class="col-2">
+                                      <img src="img/v-sign.svg" alt="double-v-sign" width="16" height="16">
+                                  </div>
+                                  <div class="col-10 text-start">
+                                      <p>
+                                          Разработка и поддержка Drupal
+                                      </p>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="price-text">
+                              <div class="row gx-1">
+                                  <div class="col-2">
+                                      <img src="img/v-sign.svg" alt="double-v-sign" width="16" height="16">
+                                  </div>
+                                  <div class="col-10 text-start">
+                                      <p>
+                                          Консультации и работы по SEO
+                                      </p>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="price-text">
+                              <div class="row gx-1">
+                                  <div class="col-2">
+                                      <img src="img/v-sign.svg" alt="double-v-sign" width="16" height="16">
+                                  </div>
+                                  <div class="col-10 text-start">
+                                      <p>
+                                          Услуги дизайнера
+                                      </p>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="price-text">
+                              <div class="row gx-1">
+                                  <div class="col-2">
+                                      <img src="img/v-sign.svg" alt="double-v-sign" width="16" height="16">
+                                  </div>
+                                  <div class="col-10 text-start">
+                                      <p>
+                                          Высокое время реакции - до 2 рабочих дней
+                                      </p>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="price-text">
+                              <div class="row gx-1">
+                                  <div class="col-2">
+                                      <img src="img/v-sign.svg" alt="double-v-sign" width="16" height="16">
+                                  </div>
+                                  <div class="col-10 text-start">
+                                      <p>
+                                          Неиспользованные оплаченные часы не переносятся
+                                      </p>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="price-text">
+                              <div class="row gx-1">
+                                  <div class="col-2">
+                                      <img src="img/v-sign.svg" alt="double-v-sign" width="16" height="16">
+                                  </div>
+                                  <div class="col-10 text-start">
+                                      <p>
+                                          Предоплата от 30 000 рублей в месяц
+                                      </p>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="price-footer text-center mt-2">
+                          <a href="#footerRegion" role="button" class="btn btn-outline-light btn-price">Свяжитесь с нами!</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-10 col-md-4 mx-auto mt-3 price-block-wrapper price-billy">
+                  <div class="price-block py-2 px-2 pb-3 price-vip">
+                      <div class="price-header pt-2">
+                          <h2>
+                              VIP
+                          </h2>
+                      </div>
+                      <div class="price-body text-center">
+                          <div class="price-text">
+                              <div class="row gx-1">
+                                  <div class="col-2">
+                                      <img src="img/v-sign.svg" alt="double-v-sign" width="16" height="16">
+                                  </div>
+                                  <div class="col-10 text-start">
+                                      <p>
+                                          Разработка и поддержка Drupal
+                                      </p>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="price-text">
+                              <div class="row gx-1">
+                                  <div class="col-2">
+                                      <img src="img/v-sign.svg" alt="double-v-sign" width="16" height="16">
+                                  </div>
+                                  <div class="col-10 text-start">
+                                      <p>
+                                          Консультации и работы по SEO
+                                      </p>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="price-text">
+                              <div class="row gx-1">
+                                  <div class="col-2">
+                                      <img src="img/v-sign.svg" alt="double-v-sign" width="16" height="16">
+                                  </div>
+                                  <div class="col-10 text-start">
+                                      <p>
+                                          Услуги дизайнера
+                                      </p>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="price-text">
+                              <div class="row gx-1">
+                                  <div class="col-2">
+                                      <img src="img/v-sign.svg" alt="double-v-sign" width="16" height="16">
+                                  </div>
+                                  <div class="col-10 text-start">
+                                      <p>
+                                          Максимальное время реакции - в день обращения
+                                      </p>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="price-text">
+                              <div class="row gx-1">
+                                  <div class="col-2">
+                                      <img src="img/v-sign.svg" alt="double-v-sign" width="16" height="16">
+                                  </div>
+                                  <div class="col-10 text-start">
+                                      <p>
+                                          Неиспользованные оплаченные часы не переносятся
+                                      </p>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="price-text">
+                              <div class="row gx-1">
+                                  <div class="col-2">
+                                      <img src="img/v-sign.svg" alt="double-v-sign" width="16" height="16">
+                                  </div>
+                                  <div class="col-10 text-start">
+                                      <p>
+                                          Предоплата от 270 000 рублей в месяц
+                                      </p>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="price-footer text-center mt-2">
+                          <a href="#footerRegion" role="button" class="btn btn-outline-light btn-price">Свяжитесь с нами!</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+  <div class="row">
+      <div class="col-3"></div>
+      <div class="col-6 tariff-link-block text-center">    
+      Вам не подходят наши тарифы? Оставьте заявку и мы предложим вам индивидуальные условия!
+      <a href="#footerRegion" class="tariffs-link d-block mt-3">Получить индивидуальный тариф</a>
+      </div>
+      <div class="col-3"></div>
+  </div>
 </div>
 <!-- ************************************ Plans ************************************* -->
 
