--- a/index.html
+++ b/index.html
@@ -780,10 +780,53 @@
 <!-- ************************************ Cases ************************************* -->
 
 <!-- ************************************ Team ************************************* -->
-<h2 id="team" class="text-center support-text mt-5 mb-3"> Команда </h2>
+<h2 id="team" class="text-center support-text"><b> Команда </b></h2>
 <div class="container team">
-
-
+  <div class="team_members row">
+    <div class="col-md-4 col-6 mb-2">
+      <div class="team_members_content container">
+        <div class="member_picture mb-3"><img src="img/IMG_2472_0.jpg"></div>
+        <div class="member_name mb-1"><b>Лёша</b></div>
+        <div class="member_discription mb-5">руководитель поддержки, планирование задач</div>
+      </div>
+    </div>
+    <div class="col-md-4 col-6 mb-2">
+      <div class="team_members_content container">
+        <div class="member_picture mb-3"><img src="img/IMG_2522_0.jpg"></div>
+        <div class="member_name mb-1"><b>Роман</b></div>
+        <div class="member_discription mb-5">инфраструктура веб-проектов</div>
+      </div>
+    </div>
+    <div class="col-md-4 col-6 mb-2">
+      <div class="team_members_content container">
+        <div class="member_picture mb-3"><img src="img/IMG_2539_0.jpg"></div>
+        <div class="member_name mb-1"><b>Ирина</b></div>
+        <div class="member_discription mb-5">менеджер по работе
+          с клинетами, организация оказания услуг</div>
+      </div>
+    </div>
+    <div class="col-md-4 col-6 mb-2">
+      <div class="team_members_content container">
+        <div class="member_picture mb-3"><img src="img/IMG_9971_16.jpg"></div>
+        <div class="member_name mb-1"><b>Даша</b></div>
+        <div class="member_discription mb-5">SEO, веб-маркетинг</div>
+      </div>
+    </div>
+    <div class="col-md-4 col-6 mb-2">
+      <div class="team_members_content container">
+        <div class="member_picture mb-3"><img src="img/IMG_2472_0.jpg"></div>
+        <div class="member_name mb-1"><b>Сергей</b></div>
+        <div class="member_discription mb-5">технический директор, 14 лет опыт работы с Drupal</div>
+      </div>
+    </div>
+    <div class="col-md-4 col-6 mb-2">
+      <div class="team_members_content container">
+        <div class="member_picture mb-3"><img src="img/IMG_2522_0.jpg"></div>
+        <div class="member_name mb-1"><b>Вадим</b></div>
+        <div class="member_discription mb-5">UX/UI дизайн</div>
+      </div>
+    </div>
+  </div>
 </div>
 <!-- ************************************ Team ************************************* -->
 
